Event Sponsers updated
Previous issues with alignment in event sponsors resolved

--- a/index.html
+++ b/index.html
@@ -344,31 +344,31 @@
   	</ol>
   	<div class="carousel-inner" align = "center">
   		<div class="carousel-item active">
-  			<img src="./assets/img/guests/1.PNG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
 		<div class="carousel-item">
-  			<img src="./assets/img/guests/2.PNG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/3.PNG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/4.PNG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/5.png" alt="" style="width: 70%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/6.png" alt="" style="width: 70%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/7.png" alt="" style="width: 70%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/8.jpg" alt="" style="width: 70%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/9.PNG" alt="" style="width: 70%;">
+  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
   		</div>
   </div>
   <a class="carousel-control-prev" href="#speakers" role="button" data-slide="prev">
@@ -1107,7 +1107,7 @@
           	<!--<img width="100%" height="100%" src='./assets/img/purvodaya/sponsors.jpg'>
           	-->
 
-          	<div class = "row">
+          	<!--<div class = "row">
           		<div class ="col-md-4">
           		</div>	
           		<div class="col-md-4">
@@ -1123,10 +1123,10 @@
           				</div>
           			</a>
           		</div>
-          	</div>	
+          	</div>	-->
 
 
-          	<div class="row">
+          	<!--<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="https://www.havishmconsulting.com/">
           				<div class="card card-profile">
@@ -1167,8 +1167,8 @@
           				</div>
           			</a>
           		</div>
-          	</div>
-          	<div class="row">
+          	</div>-->
+          	<!--<div class="row">
           		<div class="col-md-4">
           			<a target="_blank" href="http://teeshood.com/">
           				<div class="card card-profile">
@@ -1211,7 +1211,7 @@
           				</div>
           			</a>
           		</div>
-          	</div>
+          	</div>-->
           	<div class="row">
           		<div class="col-md-4">
           			<a target="_blank">
@@ -1240,7 +1240,7 @@
           			<a target="_blank" href="https://kayesssquare.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Kayess Square Consulting.png" />
+          						<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Kayess Square Consulting_res.png" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Kayess Square</h6>
@@ -1250,11 +1250,11 @@
           			</a>
 
           		</div>
-          		<div class="col-md-3">
+				<div class="col-md-3">
           			<a target="_blank" href="https://learningwhiletravelling.com/home">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Learning While Travelling.png" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Learning_While_Travelling.png" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Learning While Travelling</h6>
@@ -1262,6 +1262,7 @@
           					</div>
           				</div>
           			</a>
+
           		</div>
           		<div class="col-md-3">
           			<a target="_blank" href="https://www.bplanexperts.com/">
@@ -1277,7 +1278,7 @@
           			</a>
           		</div>
           		<div class="col-md-3">
-          		<a target="_blank" href="https://arthayan.in/">
+          			<a target="_blank" href="https://arthayan.in/">
           			<div class="card card-profile">
           				<div >
           					<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Arthayan logo.png" />
@@ -1287,13 +1288,10 @@
           					<h6 class="card-category text-muted">Mentorship Partner</h6>
           				</div>
           			</div>
-          		</a>
-          	</div>
-
-          	</div>	
-          	<div class="row">
+          		    </a>
+          		</div>
           		<div class="col-md-3">
-          			<a target="_blank" href="https://crazyaboutstartups.com/">
+          		<a target="_blank" href="https://crazyaboutstartups.com/">
           				<div class="card card-profile">
           					<div >
           						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Crazy About Startups.png" />
@@ -1304,7 +1302,38 @@
           					</div>
           				</div>
           			</a>
+          	</div>
+			
+			<div class="col-md-3">
+          			<a target="_blank" href="https://www.nishkaera.com/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Nishkaera1.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>Nishkaera</h6>
+          						<h6 class="card-category text-muted">Co-sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
           		</div>
+				
+				<div class="col-md-3">
+          			<a target="_blank" href="https://www.ecrivonsgraphology.com/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Ecrivons.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>Ecrivons</h6>
+          						<h6 class="card-category text-muted">Mentorship Partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+
+          	</div>	
+          	<!--<div class="row">
           		<div class="col-md-3">
           			<a target="_blank" href="https://www.nishkaera.com/">
           				<div class="card card-profile">
@@ -1331,7 +1360,20 @@
           				</div>
           			</a>
           		</div>
-          		<div class="col-md-3">
+          		<!--<div class="col-md-3">
+          			<a target="_blank" href="https://madworks.in/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo MADWorks.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>Mad Works</h6>
+          						<h6 class="card-category text-muted">Co-Sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>-->
+          		<!--<div class="col-md-3">
           			<a target="_blank" href="https://www.stockgro.club/">
           				<div class="card card-profile">
           					<div >
@@ -1343,7 +1385,7 @@
           					</div>
           				</div>
           			</a>
-          		</div>
+          		</div>-->
 
           	</div>
           	<!--<div class="row">
