--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
   								</div>
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
-  										<img class="img img-raised" src="./assets/img/events/Scope_Modus Operandi22.png">
+  										<img class="img img-raised" src="./assets/img/events/Scope_Modus Operandi22.jpeg">
   									</div>
   								</div>
   							</div>
@@ -930,7 +930,7 @@
   											<h6 class="card-category text-info">Quiz Club</h6>
   											<p class="card-description" align="justify">
   												“The beginning of knowledge is the discovery of something we do not understand.”- Frank Herbert.<br>
-												We, a group of knowledge enthusiasts bitten by curiosity bug, a.k.a, the Quiz Club of Vinod Gupta School of Management, IIT Kharagpur proudly present our flagship event of Purvodaya Festival – Quizzard – The Ultimate B-School Quiz. If you think you have what it takes, come, be part of this challenge!"
+												We, a group of knowledge enthusiasts bitten by curiosity bug, a.k.a, the Quiz Club of Vinod Gupta School of Management, IIT Kharagpur proudly present our flagship event of Purvodaya Festival – Quizzard – The Ultimate B-School Quiz. If you think you have what it takes, come, be a part of this challenge!"
 
   												<a href="https://dare2compete.com/p/vgsom-quiz-club-presents-quizzard-purvodaya22-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of--250035" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>                    
@@ -959,7 +959,7 @@
   											</h3>
   											<h6 class="card-category text-info">Flash</h6>
   											<p class="card-description" align="justify">
-  												Team Flash’s Veloce is a videography event that will test the creativity and filmmaking skills of participants. This event will test the videography and storytelling skills of participants. It is an individual videography event on a specific theme – “Macro Videography”.
+  												Team Flash’s Veloce is a videography event that will test the creativity and filmmaking skills of participants. It is an individual videography event on a specific theme – <b>“Macro Videography”</b>.
 												The most simple things in this world are also the most extraordinary and fascinating things and only the wise can see them! In this challenge, we expect you to get a Macro Video of something that tells a really fascinating story with a maximum duration of one minute. There is no limit on using your creativity and filmmaking skills, so go ahead and surprise us with your entries.  
 												<br>In this event, we ask all the videography enthusiasts to submit their mind-blowing videos to showcase their filmmaking skills."
 
@@ -1327,6 +1327,34 @@
           					<div class="card-body ">
           						<h6 class="card-title"><br>Ecrivons</h6>
           						<h6 class="card-category text-muted">Mentorship Partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+				
+				<div class="col-md-3">
+          			<a target="_blank" href="https://www.mission-samriddhi.org/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Mission Samriddhi.jpg" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>Mission Samriddhi</h6>
+          						<h6 class="card-category text-muted">Event Sponsor</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+				
+				<div class="col-md-3">
+          			<a target="_blank" href="https://www.iscea.org/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/ISCEA.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>ISCEA</h6>
+          						<h6 class="card-category text-muted">Event Sponsor</h6>
           					</div>
           				</div>
           			</a>
@@ -2278,14 +2306,14 @@
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2020/Akash Kumar.JPG" />
+						<img class="img" src="./assets/img/Team/2020/Bhuvanagiri Udaya Bhaskar.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Akash Kumar</h4>
+						<h4 class="card-title">Udaya Bhaskar</h4>
 					</div>
 					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/eddy9956" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/akash-kumar-bb81a81ab/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/udayabha/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -2464,14 +2492,14 @@
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2020/Bhuvanagiri Udaya Bhaskar.JPG" />
+						<img class="img" src="./assets/img/Team/2022/Vignesh E_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Udaya Bhaskar</h4>
+						<h4 class="card-title">Vignesh E</h4>
 					</div>
 					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/udayabha/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/vignesh.wolverine" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/vignesh-ezhilkumar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -2677,7 +2705,7 @@
 				</div>
 			</div>
 			
-			<div class="col-md-2">
+			<!--<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
 						<img class="img" src="./assets/img/Team/2022/Vignesh E_Purvodaya.JPG" />
@@ -2690,7 +2718,7 @@
 						<a href="https://www.linkedin.com/in/vignesh-ezhilkumar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			
 			
 		</div>
