--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@
           			<a target="_blank" href="https://assetcompounders.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/2022/Asset Componders.jpeg" />
+          						<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/2022/Asset Componders1.jpeg" />
           					</div>
           					<div class="card-body ">
           						<h4 class="card-title">Asset Componders</h4>
@@ -1306,7 +1306,7 @@
           			<a target="_blank" href="https://kayesssquare.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Kayess Square Consulting_res.png" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Kayess Square Consulting_res.png" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Kayess Square</h6>
@@ -1334,7 +1334,7 @@
           			<a target="_blank" href="https://www.bplanexperts.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=36px width=auto type="image/png" src="./assets/img/Sponsors/2022/BPlan Experts Logo.png" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/BPlan Experts Logo1.jpeg" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>BPlan Experts</h6>
@@ -1347,7 +1347,7 @@
           			<a target="_blank" href="https://arthayan.in/">
           			<div class="card card-profile">
           				<div >
-          					<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Arthayan logo.png" />
+          					<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Arthayan logo.png" />
           				</div>
           				<div class="card-body ">
           					<h6 class="card-title"><br>Arthayan</h6>
@@ -1374,7 +1374,7 @@
           			<a target="_blank" href="https://www.nishkaera.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Nishkaera1.png" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Nishkaera.png" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Nishkaera</h6>
@@ -1430,7 +1430,7 @@
           			<a target="_blank" href="https://www.stockgro.club/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=80px width=auto type="image/png" src="./assets/img/Sponsors/2022/StockGro.jpeg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/StockGro.jpeg" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>StockGro</h6>
@@ -1444,7 +1444,7 @@
           			<a target="_blank" href="https://www.decoralley.in/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=80px width=auto type="image/png" src="./assets/img/Sponsors/2022/decoralley.jpeg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/decoralley.jpeg" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Decoralley</h6>
@@ -1458,7 +1458,7 @@
           			<a target="_blank" href="http://areteservices.in/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=80px width=auto type="image/png" src="./assets/img/Sponsors/2022/arete.jpeg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/arete.jpeg" />
           					</div>
           					<div class="card-body ">
           						<h6 class="card-title"><br>Arete</h6>
