--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,7 @@
           						<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/2022/Asset Componders1.jpeg" />
           					</div>
           					<div class="card-body ">
-          						<h4 class="card-title">Asset Componders</h4>
+          						<h4 class="card-title">Asset Compounders</h4>
           						<h6 class="card-category text-muted">Silver Sponsor</h6>
           					</div>
           				</div>
