guests banners updated

--- a/index.html
+++ b/index.html
@@ -344,31 +344,31 @@
   	</ol>
   	<div class="carousel-inner" align = "center">
   		<div class="carousel-item active">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/ChiefGuestPoster.png" alt="" style="width: 40%;">
   		</div>
 		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/GuestofHonor.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/Director.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/Dean.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/KaushikMitra.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/MeeranBorwankar.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/PravirKumar.png" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/LS_cmi.png" alt="" style="width: 50%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/Coming Soon.JPEG" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/ALumcomm.png" alt="" style="width: 50%;">
   		</div>
   </div>
   <a class="carousel-control-prev" href="#speakers" role="button" data-slide="prev">
@@ -2615,14 +2615,14 @@
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2022/Vignesh E_Purvodaya.JPG" />
+						<img class="img" src="./assets/img/Team/2022/Suraj Chikhale_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Vignesh E</h4>
+						<h4 class="card-title">Suraj Chikhale</h4>
 					</div>
 					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/vignesh.wolverine" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/vignesh-ezhilkumar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/suraj.chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/suraj-chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -2813,20 +2813,6 @@
 				</div>
 			</div>
 			
-			<div class="col-md-2">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2022/Suraj Chikhale_Purvodaya.JPG" />
-					</div>
-					<div class="card-body ">
-						<h4 class="card-title">Suraj Chikhale</h4>
-					</div>
-					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/suraj.chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/suraj-chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
-					</div>
-				</div>
-			</div>
 			
 			<!--<div class="col-md-2">
 				<div class="card card-profile card-plain">
