--- a/index.html
+++ b/index.html
@@ -344,31 +344,31 @@
   	</ol>
   	<div class="carousel-inner" align = "center">
   		<div class="carousel-item active">
-  			<img src="./assets/img/guests/2022/ChiefGuestPoster.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/ChiefGuestPoster.jpg" alt="" style="width: 40%;">
   		</div>
 		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/GuestofHonor.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/GuestofHonor.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/Director.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/Director.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/Dean.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/Dean.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/KaushikMitra.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/KaushikMitra.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/MeeranBorwankar.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/MeeranBorwankar.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/PravirKumar.png" alt="" style="width: 40%;">
+  			<img src="./assets/img/guests/2022/PravirKumar.jpg" alt="" style="width: 40%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/LS_cmi.png" alt="" style="width: 50%;">
+  			<img src="./assets/img/guests/2022/LS_cmi.jpg" alt="" style="width: 50%;">
   		</div>
   		<div class="carousel-item">
-  			<img src="./assets/img/guests/2022/ALumcomm.png" alt="" style="width: 50%;">
+  			<img src="./assets/img/guests/2022/ALumcomm.jpg" alt="" style="width: 50%;">
   		</div>
   </div>
   <a class="carousel-control-prev" href="#speakers" role="button" data-slide="prev">
