updated MAD event

--- a/index.html
+++ b/index.html
@@ -611,17 +611,17 @@
                                  <div class="row">
                                     <div class="col-md-7">
                                        <h3 class="card-title">
-                                          <a href="#pablo">Leader's Challenge - Marketing Case Competition </a>
+                                          <a href="#pablo">Leader's Challenge</a>
                                        </h3>
                                        <h6 class="card-category text-info">MAD Club</h6>
                                        <p class="card-description" align="justify">
-                                          Leader’s Challenge is the Flagship event of the MAD, Marketing and Advertising Club of VGSoM, designed to test the budding leader within you. Leader's Challenge is a national-level competition for developing innovative product lines for a market leader in a yet unexplored market segment. The objective of the event is to generate ideas about a new product for a market leader building on their strengths and brand values, and then accordingly make plans for brand positioning, risk analysis, feasibility, and SWOT analysis, financial analysis, and overall business and marketing strategy for it. The idea is to sensitize students to real-life business situations and to develop their analytical and presentation skills. Through this competition, we aspire to reach out to a wide network of Indian academic institutes with the aim to foster and nurture budding minds.
-                                          <a href="https://dare2compete.com/competition/leaders-challenge-purvodaya22-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-techno-250033" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
+                                          Leader's Challenge is a national-level competition for developing innovative product lines for a market leader in a yet unexplored market segment. The objective of the event is to generate ideas about a new product for a market leader building on their strengths and brand values and then accordingly make plans for brand positioning, risk analysis, feasibility and SWOT analysis, financial analysis and overall business and marketing strategy for it. 
+                                          <a href="https://unstop.com/competition/leaders-challenge-purvodaya23-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-khar-570788" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
                                        </p>
                                     </div>
                                     <div class="col-md-5">
                                        <div class="card-header card-header-image">
-                                          <img class="img img-raised" src="./assets/img/events/MAD_Leader's Challenge22.png">
+                                          <img class="img img-raised" src="./assets/img/events/MAD_Leader's Challenge_Poster23.jpg">
                                        </div>
                                     </div>
                                  </div>
