--- a/index.html
+++ b/index.html
@@ -695,20 +695,19 @@
                                     <div class="col-md-5">
                                        <div class="card-header card-header-image">
                                           <a href="#events">
-                                          <img class="img" src="./assets/img/events/Flash_Veloce22.png">
+                                          <img class="img" src="./assets/img/events/Reflecto_2023.png">
                                           </a>
                                        </div>
                                     </div>
                                     <div class="col-md-7">
                                        <h3 class="card-title">
-                                          <a href="#pablo">Veloce – Capturing the Details of Life</a>
+                                          <a href="#pablo">Reflecto Spectronum</a>
                                        </h3>
                                        <h6 class="card-category text-info">Flash</h6>
                                        <p class="card-description" align="justify">
-                                          Team Flash’s Veloce is a videography event that will test the creativity and filmmaking skills of participants. It is an individual videography event on a specific theme – <b>“Macro Videography”</b>.
-                                          The most simple things in this world are also the most extraordinary and fascinating things and only the wise can see them! In this challenge, we expect you to get a Macro Video of something that tells a really fascinating story with a maximum duration of one minute. There is no limit on using your creativity and filmmaking skills, so go ahead and surprise us with your entries.  
-                                          <br>In this event, we ask all the videography enthusiasts to submit their mind-blowing videos to showcase their filmmaking skills."
-                                          <a href="https://dare2compete.com/p/veloce-purvodaya22-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-250004" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
+                                          This contest is all about reflection! Show us your best shots that capture the beauty and magic of reflections in any form whether it's reflection in a puddle, a mirror red building or a shimmering body of water
+                                          <br>Reflect light capture life
+                                          <a href="https://unstop.com/competition/reflecto-spectronum-purvodaya23-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kh-573156" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
                                        </p>
                                     </div>
                                  </div>
@@ -717,17 +716,18 @@
                                  <div class="row">
                                     <div class="col-md-7">
                                        <h3 class="card-title">
-                                          <a href="#pablo">Phoson - Let's Collab: You and Art</a>
+                                          <a href="#pablo">Pixels in panorama</a>
                                        </h3>
                                        <h6 class="card-category text-info">Flash</h6>
                                        <p class="card-description" align="justify">
-                                          Team Flash’s Phoson is a photography event that will test the creativity and photography skills of participants. As it is said, " You don't take a photograph, you make it". In this event, we ask all the photography enthusiasts to submit photos on one of the three amusing themes that have been provided by us: <b>‘Tech & Life’, ‘Lights & Nights’, ‘Climate & City’</b>.
-                                          <a href="https://dare2compete.com/p/phoson-purvodaya22-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-250023" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
+                                          Join us for a winter wonderland photography event! Grab your cameras and head out to capture the beauty of the winter season in panorama mode. Whether it's snow-capped mountains, frozen lakes, or cozy cabin scenes, we want to see it all. Don't forget to bundle up and bring your tripod for those stunning panoramic shots. Share your best captures with us for a chance to win prizes. Let's celebrate the season and capture it's beauty in panoramic view
+                                          <br>panoramic views, panoramic photography
+										  <a href="https://unstop.com/competition/pixels-in-panorama-purvodaya23-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kha-573054" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
                                        </p>
                                     </div>
                                     <div class="col-md-5">
                                        <div class="card-header card-header-image">
-                                          <img class="img img-raised" style="height:400px" src="./assets/img/events/Flash_Phoson22.png">
+                                          <img class="img img-raised" style="height:400px" src="./assets/img/events/Pixels_2023.jpeg">
                                        </div>
                                     </div>
                                  </div>
