updated purvodaya description

--- a/index.html
+++ b/index.html
@@ -191,14 +191,15 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">Purvodaya 2022 – BREAKING THE PARADIGMS</h4>
+                        <h4 class="title">Purvodaya 2023 – Prism of Possibilities</h4>
                         <p align="center">
                            <b>
-                              “Change will not come if we wait for some other person or some other time. We are the ones we've been waiting for. We are the change that we seek.” 
+                              “If we all did the things we are really capable of doing, we would literally astound ourselves.” 
                         </p>
-                        <p align="right">- Barack Obama</b></p>
-                        <p align="justify">The past millennium has been an era of countless inventions like the Printing Press which allowed literacy to greatly expand, Electric Light that powered countless social changes, Vaccinations that protected people from diseases, Airplanes allowing people and products to quickly move, Radio and Television that made the world look smaller, and Computers which transformed Business world. These changes were only possible due to the Creativity of some enthusiastic minds. That Creativity broke out established patterns to look at things differently. Small changes in our reasoning can prompt gigantic modifications in our outcome.
-                           In Purvodaya, the annual B-School fest of Vinod Gupta School of Management, IIT Kharagpur, we encourage the vigorous minds of the Country to participate in a surfeit of opportunities and to leave a mark by excelling in different events by abandoning antiquated approaches and spawning the newer ideas. Through adaptability, flexibility, and robustness these bright minds decipher the labyrinth of contemporary Business challenges and emerge victoriously. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
+                        <p align="right">- Thomas A. Edison</b></p>
+                        <p align="justify">The pandemic significantly changed the business climate throughout the world, leading to business shutdown, customer losses, and employee layoffs. At the same time, several companies developed innovative strategies for coping with the circumstances, continuing to operate, and even expanding during the unpredictable times. These businesses proved to be role models for the rest of the world in terms of turning a challenge into a possibility. 
+                        <br>
+						In this post pandemic era, Purvodaya, the annual B-School fest of Vinod Gupta School of Management, in our theme, "The Prism of Possibilities" seeks to help the emerging managers restructure their perspective when exposed to the VUCA World and urges them to view the world through a lens of untapped potential and possibilities for innovation and advancement. Through adaptability, flexibility, and robustness these bright minds decipher the labyrinth of contemporary business challenges and emerge victoriously. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
                         </p>
                      </div>
                   </div>
