--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <title>
-         Purvodaya'22 | VGSoM, IIT Kharagpur
+         Purvodaya'23 | VGSoM, IIT Kharagpur
       </title>
       <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
       <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>
@@ -125,7 +125,7 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya_22-min.png"> 
+                           <img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya23.png">
                            <!--
                               <h4 style="font-family:pristina;">
                               	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -149,7 +149,7 @@
                         </div>
                         <div class="col-md-5 ml-auto">
                            <div class="iframe-container">
-                              <iframe height="250" src="https://www.youtube.com/embed/AJDF2RNDlnY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+                              <iframe width="560" height="315" src="https://www.youtube.com/embed/xwQVuyMq7nA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                            </div>
                         </div>
                         <div class=col-md-10>
