--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,97 @@
                      <div class="col-md-12">
                         <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel">
                            <div class="carousel-inner">
-                              <div class="carousel-item active">
+					<div class="carousel-item active">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/audience.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Chief Guest.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Guest of Honour.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/LS.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Purvodaya Pic1.png">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Purvodaya Pic2.jpeg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Purvodaya Pic3.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Purvodaya Pic4.jpg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+					<div class="carousel-item">
+                                 <div class="card card-testimonial card-plain">
+                                    <div class="card-header card-header-image">
+                                       <img class="img img-raised" src="./assets/img/gallery/Standee.jpeg">
+                                    </div>
+                                    <div class="card-body">
+                                       <h5 class="card-description">Purvodaya '23</h5>
+                                    </div>
+                                 </div>
+                              </div>
+                              <div class="carousel-item">
                                  <div class="card card-plain card-testimonial">
                                     <div class="card-header card-header-image">
                                        <img class="img img-raised" src="./assets/img/gallery/2020-1.jpg">
