--- a/index.html
+++ b/index.html
@@ -440,16 +440,13 @@ As we explore new horizons together, we'll discover that the end of one journey 
                                        </h3>
                                        <h6 class="card-category text-info">Entrepreneurship Cell</h6>
                                        <p class="card-description" align="justify">
-                                          Srijan is a business plan competition that will enable you to take your ideas to the next level. The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of angel investors and venture capitalists.
+                                          Promoting the spirit of Innovation and Entrepreneurship amongst the students of B-schools across the country is the objective of Srijan – the Annual Business Plan Contest. This will provide a unique opportunity for budding entrepreneurs to pitch their business ideas to venture capitalists and investors. Srijan is a business plan competition that will enable you to take your ideas to the next level. The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of angel investors and venture capitalists.
                                           </p> <br>
-                                          <a href="https://unstop.com/competition/srijan-purvodaya23-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-568898" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
+                                          <a href="https://unstop.com/competitions/srijan-purvodaya24-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-855253" target="_blank"><button class="btn btn-primary pull-right"> Register on Unstop </button></a>
                                        
                                     </div>
-                                    <div class="col-md-5">
-                                       <div class="card-header card-header-image">
-                                          <img class="img img-raised" src="./assets/img/events/ECell_Srijan23.png">
-                                       </div>
-                                    </div>
+                                    <img class="img img-raised" src="./assets/img/events-2024/Srijan_banner.png">
+                                       
                                  </div>
                               </div>
                               <div class="card card-plain card-blog">
