--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
          gtag('config', 'UA-156085361-2');
       </script>
       <meta charset="utf-8" />
-      <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/purvodaya-logo.png">
+    
       <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <title>
-         Purvodaya'24 | VGSoM, IIT Kharagpur
+         Purvodaya'25 | VGSoM, IIT Kharagpur
       </title>
       <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
       <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>
@@ -187,7 +187,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">PURVODAYA 2024 – NAVIGATING NEW HORIZONS</h4>
+                        <h4 class="title">PURVODAYA 2025 – xyz</h4>
                         <p align="center">
                            <b>
                               “The past, like the future, is indefinite and exists only as a spectrum of possibilities.”
