--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <link rel="icon" type="image/png" href="./assets/img/purvodaya-logo.png">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
       <title>
-         Purvodaya'24 | VGSoM, IIT KGP
+         Purvodaya'25 | VGSoM, IIT KGP
       </title>
       <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
       <meta name="description" content="Purvodaya is the annual business fest of vinod gupta school of management, IIT Kharagpur. It is an amalgamation of events spread across all the domains of business and management. "/>
@@ -191,7 +191,7 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">PURVODAYA 2024 – NAVIGATING NEW HORIZONS</h4>
+                        <h4 class="title">PURVODAYA 2025 – NAVIGATING NEW HORIZONS</h4>
                         <p align="center">
                            <b>
                               “The past, like the future, is indefinite and exists only as a spectrum of possibilities.”
@@ -234,7 +234,7 @@ As we explore new horizons together, we'll discover that the end of one journey 
                               <i class="fa fa-users"></i>
                            </div>
                            <h4 class="info-title">8000+</h4>
-                           <p><b> Purvodaya '23</b> saw a staggering number of registrations of over 8000 students from across the country 
+                           <p><b> Purvodaya '24</b> saw a staggering number of registrations of over 8000 students from across the country 
   </p>
                         </div>
                      </div>
@@ -1122,6 +1122,66 @@ As we explore new horizons together, we'll discover that the end of one journey 
                         <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel">
                            <div class="carousel-inner">
 					<div class="carousel-item active">
+                     <div class="card card-testimonial card-plain">
+                        <div class="card-header card-header-image">
+                           <img class="img img-raised" src="assets\img\gallery\DSC01612.JPG">
+                        </div>
+                        <div class="card-body">
+                           <h5 class="card-description">Purvodaya '24</h5>
+                        </div>
+                     </div>
+                  </div>
+               <div class="carousel-item">
+                     <div class="card card-testimonial card-plain">
+                     <div class="card-header card-header-image">
+                        <img class="img img-raised" src="assets\img\gallery\IMG_1928.JPG">
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-description">Purvodaya '24</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="card card-testimonial card-plain">
+                     <div class="card-header card-header-image">
+                        <img class="img img-raised" src="assets\img\gallery\IMG_2143.JPG">
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-description">Purvodaya '24</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="card card-testimonial card-plain">
+                     <div class="card-header card-header-image">
+                        <img class="img img-raised" src="assets\img\gallery\IMG_4403.JPG">
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-description">Purvodaya '24</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="card card-testimonial card-plain">
+                     <div class="card-header card-header-image">
+                        <img class="img img-raised" src="assets\img\gallery\IMG_8718.JPG">
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-description">Purvodaya '24</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">
+                  <div class="card card-testimonial card-plain">
+                     <div class="card-header card-header-image">
+                        <img class="img img-raised" src="assets\img\gallery\IMG_8811.JPG">
+                     </div>
+                     <div class="card-body">
+                        <h5 class="card-description">Purvodaya '24</h5>
+                     </div>
+                  </div>
+               </div>
+               <div class="carousel-item">   
                                  <div class="card card-testimonial card-plain">
                                     <div class="card-header card-header-image">
                                        <img class="img img-raised" src="./assets/img/gallery/audience.jpg">
