Updated write up
Chaged header image and write up

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
                   <div class="container">
                      <div class="row">
                         <div class="col-md-6">
-                           <img width=auto height=180px type="image/png" src="./assets/img/purvodaya/Purvodaya_24.png">
-                           
+                           <img width=auto height=90px type="image/png" src="./assets/img/purvodaya/Purvodaya_25.png">
+                           <p></p>
                            <p align="justify">Purvodaya is an amalgamation of events spread across all the domains of business and management. Spread across 3 days, it provides an ideal platform for the budding managers and innovators of today to hone their skills and test their mettle against their peers. The event hosts a complete business extravaganza.</p>
                         </div>
                         <div class="col-md-5 ml-auto">
                            <div class="iframe-container">
-                              <iframe width="560" height="315" src="https://www.youtube.com/embed/FIzO4VO8d5w?si=Azyux51wFUi46vMA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                              <iframe width="560" height="315" src="https://www.youtube.com/watch?v=am2ht8ubmQY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                            </div>
                         </div>
                         <div class=col-md-10>
@@ -162,18 +162,14 @@
                   </div>
                   <div class="row">
                      <div class="col-md-11 ml-auto mr-auto text-center">
-                        <h4 class="title">PURVODAYA 2025 – NAVIGATING NEW HORIZONS</h4>
+                        <h4 class="title">PURVODAYA 2025 - CATALYSTS OF CHANGE</h4>
                         <p align="center">
                            <b>
-                              “The past, like the future, is indefinite and exists only as a spectrum of possibilities.”
+                              “Innovation distinguishes between a leader and a follower.”
                         </p>
-                        <p align="right">- Franklin D. Roosevelt</b></p>
-                        <p align="justify">In today's dynamic and fast-paced world, the ability to navigate change and explore uncharted territories is paramount. In every industry, from finance to technology, from marketing to entrepreneurship, the horizon is continually shifting. What was once considered the cutting edge is now the norm, and what lies ahead remains a tantalizing mystery.
-To define a horizon is to limit, but to venture beyond the confines of fear, doubt, and uncertainty one must remember that the end of a horizon is the beginning of the other.
-The theme 'Navigating New Horizons' represents our collective commitment to growth, innovation, and the pursuit of excellence. It encourages us to break free from the confines of the familiar and embrace the challenges and opportunities that lie beyond.
-As we explore new horizons together, we'll discover that the end of one journey is only the beginning of another. Purvodaya'24 is your platform to set sail towards uncharted waters, to dream big, and to redefine what's possible. Join us in this exhilarating pursuit, and let's navigate new horizons, hand in hand, towards a brighter, more promising future.
-
-
+                        <p align="right">- Steve Jobs</b></p>
+                        <p align="justify">
+                           Catalysts of Change is a call to action for businesses and leaders to embrace progress, foster resilience and reimagine possibilities in an ever-evolving world. As we navigate shifting paradigms, we celebrate the pioneers transforming challenges into opportunities. In the past decade, India has transitioned from excelling in sectors like ecommerce and healthcare to becoming a leader in digital transformation. Initiatives like Digital India and UPI have revolutionized financial inclusion and technological growth. The ability of AI to process vast amounts of data, automate processes, and provide insights is what drives digital transformation and innovation across such areas as well as many others. Purvodaya'25 honors these Catalysts of Change, who challenge the status quo and propel us toward a sustainable, innovative, and equitable future.
                         </p>
                      </div>
                   </div>
